@@ -1,3 +1,12 @@
+2002-08-13  Maciej Stachowiak  <mjs@apple.com>
+
+	Small speed improvement. 3% faster on cvs-js-performance, no
+	measurable change on cvs-static-urls.
+	
+        * kjs/collector.cpp:
+        (Collector::collect): Combine 3 loops over all objects into one,
+	to reduce flat time and improve locality of reference.
+
 2002-08-12  Darin Adler  <darin@apple.com>
 
 	Speed improvements. 19% faster on cvs-js-performance, 1% on cvs-static-urls.
